Common/SSCE/sdk/include/ssce.h



extern SSCE_S32 API SSCE_CheckBlockDlgTmplt(HWND parent, SSCE_CHAR FAR *block,
  SSCE_S32 blkLen, SSCE_S32 blkSz, SSCE_S16 showContext, HINSTANCE clientInst,
  const char FAR *spellDlgTmpltName,
  const char FAR *lexDlgTmpltName, const char FAR *optDlgTmpltName,
  const char FAR *newLexDlgTmpltName);


extern SSCE_S16 API SSCE_CheckCtrlBackground(HWND ctrlWin);


extern SSCE_S16 API SSCE_CheckCtrlDlg(HWND parent, HWND ctrlWin,
  SSCE_S16 selTextOnly);


extern SSCE_S16 API SSCE_CheckCtrlDlgTmplt(HWND parent, HWND ctrlWin,
  SSCE_S16 selTextOnly, HINSTANCE clientInst,
  const char FAR *spellDlgTmpltName,
  const char FAR *lexDlgTmpltName, const char FAR *optDlgTmpltName,
  const char FAR *newLexDlgTmpltName);


extern SSCE_S16 API SSCE_EditLexDlg(HWND parent);


extern SSCE_S16 API SSCE_EditLexDlgTmplt(HWND parent, HINSTANCE hInst,
  const char FAR *dlgTmpltName, const char FAR *newLexDlgTmptName);


extern SSCE_S16 API SSCE_GetAutoCorrect(void);


extern void API SSCE_GetHelpFile(char FAR *fileName, SSCE_U16 fileNameSz);


extern SSCE_S16 API SSCE_GetLexId(const char FAR *lexFileName);


extern void API SSCE_GetMainLexFiles(char FAR *fileList,
  SSCE_U16 fileListSz);


extern void API SSCE_GetMainLexPath(char FAR *path, SSCE_U16 pathSz);


extern SSCE_S16 API SSCE_GetMinSuggestDepth(void);


extern void API SSCE_GetRegTreeName(char FAR *regTreeName,
  SSCE_U16 regTreeNameSz);


extern void API SSCE_GetSelUserLexFile(char FAR *fileName,
  SSCE_U16 fileNameSz);


extern SSCE_S16 API SSCE_GetSid(void);


extern void API SSCE_GetStatistics(SSCE_U32 FAR *wordsChecked,
  SSCE_U32 FAR *wordsChanged, SSCE_U32 FAR *errorsDetected);


extern void API SSCE_GetStringTableName(char FAR *tableName,
  SSCE_U16 tableNameSz);


extern void API SSCE_GetUserLexFiles(char FAR *fileList,
  SSCE_U16 fileListSz);


extern void API SSCE_GetUserLexPath(char FAR *path, SSCE_U16 pathSz);


extern SSCE_S16 API SSCE_OptionsDlg(HWND parent);


extern SSCE_S16 API SSCE_OptionsDlgTmplt(HWND parent, HINSTANCE hInst,
  const char FAR *tmpltName);


extern SSCE_S16 API SSCE_ResetLex(void);


extern SSCE_S16 API SSCE_SetAutoCorrect(SSCE_S16 ac);


extern void API SSCE_SetDialogOrigin(SSCE_S16 x, SSCE_S16 y);


extern SSCE_S16 API SSCE_SetHelpFile(const char FAR *helpFile);


extern SSCE_S16 API SSCE_SetIniFile(const char FAR *iniFile);


extern SSCE_S16 API SSCE_SetKey(SSCE_U32 key);


extern SSCE_S16 API SSCE_SetMainLexFiles(const char FAR *fileList);


extern SSCE_S16 API SSCE_SetMainLexPath(const char FAR *path);


extern SSCE_S16 API SSCE_SetMinSuggestDepth(SSCE_S16 depth);


extern SSCE_S16 API SSCE_SetRegTreeName(const char FAR *regTreeName);


extern SSCE_S16 API SSCE_SetSelUserLexFile(const char FAR *fileName);


extern SSCE_S16 API SSCE_SetStringTableName(const char FAR *tableName);


extern SSCE_S16 API SSCE_SetUserLexFiles(const char FAR *fileList);


extern SSCE_S16 API SSCE_SetUserLexPath(const char FAR *path);