Common/SSCE/sdk/vb.net/ssce.vb


    Declare Function SSCE_CheckBlockDlgTmplt Lib "ssce5332.dll" (ByVal parent As Integer, _
      ByVal block$, ByVal blkLen As Integer, ByVal blkSz As Integer, ByVal showContext As Short, _
      ByVal clientInst As Integer, ByVal spellDlgTmplt$, ByVal dictDlgTmplt$, _
      ByVal optDlgTmplt$, ByVal newLexDlgTmplt$) As Integer

    Declare Function SSCE_CheckCtrlBackground Lib "ssce5332.dll" (ByVal ctrlWin As Integer) _
       As Short

    Declare Function SSCE_CheckCtrlDlg Lib "ssce5332.dll" (ByVal parent As Integer, _
      ByVal ctrlWin As Integer, ByVal selTextOnly As Short) As Short

    Declare Function SSCE_CheckCtrlDlgTmplt Lib "ssce5332.dll" (ByVal parent As Integer, _
      ByVal ctrlWin As Integer, ByVal selTextOnly As Short, ByVal clientInst As Integer, _
      ByVal spellDlgTmplt$, ByVal dictDlgTmplt$, ByVal optDlgTmplt$, _
      ByVal newLexDlgTmplt$) As Short

    Declare Function SSCE_EditLexDlg Lib "ssce5332.dll" (ByVal parent As Integer) As Short

    Declare Function SSCE_EditLexDlgTmplt Lib "ssce5332.dll" (ByVal parent As Integer, _
      ByVal clientInst As Integer, ByVal dictDlgTmplt$, ByVal newLexDlgTmplt$) As Short

    Declare Function SSCE_GetAutoCorrect Lib "ssce5332.dll" () As Short

    Declare Sub SSCE_GetHelpFile Lib "ssce5332.dll" (ByVal fileName$, _
      ByVal fileNameSz As Short)

    Declare Function SSCE_GetLexId Lib "ssce5332.dll" (ByVal lexFileName$) As Short

    Declare Sub SSCE_GetMainLexFiles Lib "ssce5332.dll" (ByVal fileList$, _
      ByVal fileListSz As Short)

    Declare Sub SSCE_GetMainLexPath Lib "ssce5332.dll" (ByVal path$, _
      ByVal pathSz As Short)

    Declare Function SSCE_GetMinSuggestDepth Lib "ssce5332.dll" () As Short

    Declare Sub SSCE_GetRegTreeName Lib "ssce5332.dll" (ByVal regTreeName$, _
      ByVal regTreeNameSz As Short)

    Declare Sub SSCE_GetSelUserLexFile Lib "ssce5332.dll" (ByVal fileName$, _
      ByVal fileNameSz As Short)

    Declare Function SSCE_GetSid Lib "ssce5332.dll" () As Short

    Declare Sub SSCE_GetStatistics Lib "ssce5332.dll" (ByVal wordsChecked As Integer, _
      ByVal wordsChanged As Integer, ByVal errorsDetected As Integer)

    Declare Sub SSCE_GetStringTableName Lib "ssce5332.dll" (ByVal tableName$, _
      ByVal tableNameSz As Short)

    Declare Sub SSCE_GetUserLexFiles Lib "ssce5332.dll" (ByVal fileList$, _
      ByVal fileListSz As Short)

    Declare Sub SSCE_GetUserLexPath Lib "ssce5332.dll" (ByVal path$, ByVal pathSz As Short)

    Declare Function SSCE_OptionsDlg Lib "ssce5332.dll" (ByVal parent As Integer) As Short

    Declare Function SSCE_OptionsDlgTmplt Lib "ssce5332.dll" (ByVal parent As Integer, _
      ByVal clientInst As Integer, ByVal optDlgTmplt$) As Short

    Declare Function SSCE_ResetLex Lib "ssce5332.dll" () As Short

    Declare Function SSCE_SetAutoCorrect Lib "ssce5332.dll" (ByVal ac As Short) As Short

    Declare Sub SSCE_SetDialogOrigin Lib "ssce5332.dll" (ByVal x As Short, ByVal y As Short)

    Declare Function SSCE_SetHelpFile Lib "ssce5332.dll" (ByVal helpFile$) As Short

    Declare Function SSCE_SetIniFile Lib "ssce5332.dll" (ByVal iniFile$) As Short

    Declare Function SSCE_SetKey Lib "ssce5332.dll" (ByVal key As Integer) As Short

    Declare Function SSCE_SetMainLexFiles Lib "ssce5332.dll" (ByVal fileList$) As Short

    Declare Function SSCE_SetMainLexPath Lib "ssce5332.dll" (ByVal path$) As Short

    Declare Function SSCE_SetMinSuggestDepth Lib "ssce5332.dll" (ByVal depth As Short) As Short

    Declare Function SSCE_SetRegTreeName Lib "ssce5332.dll" (ByVal regTreeName$) As Short

    Declare Function SSCE_SetSelUserLexFile Lib "ssce5332.dll" (ByVal fileName$) As Short

    Declare Function SSCE_SetStringTableName Lib "ssce5332.dll" (ByVal tableName$) As Short

    Declare Function SSCE_SetUserLexFiles Lib "ssce5332.dll" (ByVal fileList$) As Short

    Declare Function SSCE_SetUserLexPath Lib "ssce5332.dll" (ByVal path$) As Short

End Module
